# grundstueckgewinnsteuer

./: CANTON_CHECKLIST.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
grundstueckgewinnsteuer/: __init__.py  models.py
grundstueckgewinnsteuer-web/: .gitignore  DEPLOYMENT.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
grundstueckgewinnsteuer-web/scripts/: extract-map-paths.js  parity.ts
grundstueckgewinnsteuer-web/src/app/: globals.css  layout.tsx  page.tsx
grundstueckgewinnsteuer-web/tests/: engine.test.ts
grundstueckgewinnsteuer/cantons/: ag.py  ai.py  ar.py  be.py  bl.py  bs.py  fr.py  ge.py  gl.py  gr.py  ju.py  lu.py  ne.py  nw.py  ow.py  registry.py  sg.py  sh.py  so.py  sz.py  tg.py  ti.py  ur.py  vd.py  vs.py  zg.py  zh.py
grundstueckgewinnsteuer/engine/: base.py  rounding.py  tariff.py
grundstueckgewinnsteuer/sources/: ag.md  ai.md  ar.md  be.md  bl.md  bs.md  fr.md  ge.md  gl.md  gr.md  ju.md  lu.md  ne.md  nw.md  ow.md  sg.md  sh.md  so.md  sz.md  tg.md  ti.md  ur.md  vd.md  vs.md  zg.md  zh.md
grundstueckgewinnsteuer_ch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
streamlit_app/: app.py
tests/: test_ag.py  test_ai.py  test_ar.py  test_be.py  test_bl.py  test_bs.py  test_fr.py  test_ge.py  test_gl.py  test_gr.py  test_ju.py  test_lu.py  test_ne.py  test_nw.py  test_ow.py  test_rounding.py  test_sg.py  test_sh.py  test_so.py  test_sz.py  test_tariff.py  test_tg.py  test_ti.py  test_ur.py  test_vd.py  test_vs.py  test_zg.py  test_zh.py
(+100 files in other folders)
